# aether-vault

./: AGENTS.md  Caddyfile  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  go.mod  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts  tsconfig.build.json  tsconfig.json
.github/workflows/: USAGE_EXAMPLES.md  action-release.yml  ci-cd-with-vault.yml  darwin-release.yml  docker-image.yml  docker-publish.yml  dockerpkg-release.yml  docs-release.yml  linux-release.yml  node-release.yml  php-release.yml  release-server.yml  windows-release.yml
app/: README.md  package.json
app/components/: Header.tsx  Sidebar.tsx
cmd/: README.md
docs/: package.json
docs/package/node/: README.md  api.md  architecture.md  configuration.md  examples.md
messages/: package.json
options/: README.md  go.mod
package/action/: README.md  action.yml
package/cli/: ARCHITECTURE.md  README.md  go.mod  go.sum  main.go
package/cli/cmd/: agent.go  auth.go  capability.go  help.go  init.go  root.go  status.go  version.go
package/cli/docs/: CBAC_OVERVIEW.md  COMMANDS_AGENT.md  COMMANDS_CAPABILITY.md  CONFIG_OVERVIEW.md  INDEX.md  INSTALLATION.md  INTEGRATION_OVERVIEW.md  QUICK_START.md  README.md
package/cli/internal/capability/: audit.go  engine.go  policy.go  store.go
package/cli/internal/config/: file.go  manager.go
package/cli/internal/ipc/: client.go  server.go
package/cli/pkg/types/: capability.go  client.go  config.go  context.go
package/docker/: Dockerfile  README.md  go.mod  go.sum
package/docker/cmd/aether-runtime/: main.go
package/docker/internal/audit/: logger.go
package/docker/internal/auth/: client.go
package/docker/internal/config/: resolver.go
package/docker/internal/injector/: injector.go
package/docker/internal/runtime/: manager.go
package/docker/internal/vault/: client.go
package/github/: .env.example  Dockerfile  package.json
package/github/src/: index.ts
package/github/src/audit/: audit-logger.ts
package/github/src/auth/: github-auth.ts
package/github/src/config/: schema.ts
package/github/src/prCommenter/: pr-commenter.ts
package/github/src/scanner/: secret-scanner.ts
package/github/src/types/: index.ts
package/github/src/utils/: logger.ts
package/github/src/vaultClient/: vault-client.ts
package/github/src/webhook/: webhook-handler.ts
package/java/: pom.xml
package/java/src/main/java/com/aether/vault/capability/: Capability.java  GrantedCapability.java  TTL.java
package/node/: .npmrc  Dockerfile  README.md  docker-compose.yml  package.json
package/node/src/: index.ts
package/node/src/auth/: auth.client.ts
package/node/src/core/: client.ts  config.loader.ts  config.ts  errors.ts
package/node/src/database/: connection.registry.ts  credentials.manager.ts  errors.ts  types.ts
package/node/src/database/drivers/: index.ts
package/node/src/identity/: identity.client.ts
package/node/src/nextjs/: hooks.ts  index.ts  index.tsx
package/node/src/router/: balancer.client.ts  registry.client.ts  status.client.ts
package/node/src/secrets/: secrets.client.ts
package/node/src/totp/: totp.client.ts
package/node/src/types/: index.ts
package/php/: Dockerfile  composer.json  docker-compose.yml
package/php/src/: Vault.php
package/php/src/Exception/: VaultAccessDeniedException.php  VaultException.php  VaultExpiredCapabilityException.php  VaultPolicyViolationException.php
package/python/: README.md  pyproject.toml
package/python/src/: __init__.py
package/python/src/client/: base_client.py
package/python/src/credentials/: __init__.py
package/python/src/exceptions/: __init__.py
package/python/src/policy/: __init__.py
package/python/src/transport/: __init__.py
package/rust/: Cargo.toml
package/rust/src/: lib.rs
package/rust/src/audit/: mod.rs
package/rust/src/capability/: capability.rs  mod.rs
package/rust/src/client/: client.rs  mod.rs
package/rust/src/config/: config.rs
package/rust/src/context/: mod.rs
package/rust/src/crypto/: mod.rs
package/rust/src/error/: error.rs  mod.rs
package/rust/src/identity/: mod.rs
package/rust/src/transport/: mod.rs  transport.rs
package/vscode/: package.json
prisma/: package.json
routers/: go.mod  go.sum  main.go
routers/cmd/router/: config.go  health.go  logs.go  root.go  security.go  services.go  start.go  status.go  stop.go  version.go
routers/configs/: router.dev.yaml  router.prod.yaml  router.test.yaml  router.yaml
routers/pkg/routerpkg/: balancer.go  constants.go  handlers.go  health.go  implementations.go  interfaces.go  mock_logger.go  registry.go  router.go
routers/src/config/: loader.go  security.go
routers/src/security/: middleware.go  types.go
server/: .env.example  DOCKER.md  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go
server/src/config/: config.go
server/src/controllers/: identity.go  secret.go
server/src/middleware/: audit.go  auth.go  utils.go
server/src/model/: dto.go
server/src/services/: auth.go  secret.go
services/: README.md  go.mod
(+12 files in other folders)
